--- a/styles.css
+++ b/styles.css
@@ -382,6 +382,37 @@ html{
 	margin:0 auto;
 }
 /*________________portfolio end's_____________________*/
+/*________________contact start's_____________________*/
+.contact{
+	width:90%;
+	height:100vh;
+	background-color:#ecf0f3;
+	position:relative;
+	top:100px;
+	margin:0 auto;
+}
+.container{
+	width:100%;
+	height:85.7vh;
+	background-color:#ecf0f3;
+	margin:0 auto;
+	position: relative;
+	overflow:hidden;
+	top:50px;
+	border-radius:20px;
+	box-shadow:13px 13px 20px #cbced1 ,-13px -13px 20px #fff;
+}
+.contact .container .box{
+	width:35%;
+	height:80%;
+	background-color: #ecf0f3;
+	box-shadow:13px 13px 15px #cbced1 ,-13px -13px 15px #fff;
+	border-radius:10px;
+	position:absolute;
+	left:60%;
+	top: 9%;
+}
+/*________________contact end's_____________________*/
 /*_______________________________________________________________________responsive_______________________________________________________________________*/
 
 /* @media (max-width:768px){
