--- a/styles.css
+++ b/styles.css
@@ -104,7 +104,8 @@ html{
 	width:60%;
 	height:100%;
 	float:left;
-	border-radius:0px 20px 20px 0px;
+	border-radius: 25% 4% 3% 25% / 27% 4% 4% 64%;
+	overflow: hidden;
 }
 .name{
 	background: right/0% 100% no-repeat radial-gradient( rgba(225,225,0.5), rgba(225,225,0.5));
