--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,7 @@ html{
 	height:100%;
 	float:left;
 	/* border-radius:0px 20px 20px 0px; */
-	border-radius: 32% 68% 0% 100% / 51% 0% 100% 49%;
+	border-radius: 25% 4% 3% 25% / 27% 4% 4% 64%;
 	overflow: hidden;
 }
 .name{
@@ -126,14 +126,13 @@ html{
 }
 .social a{
 	margin:10px;
-	/* border:1px solid black; */
+	border: 0px solid black;
 	padding:10px 13px 10px 13px;
 	height:10px;
 	text-decoration: none;
 	color:purple;
 	border-radius:50%;
 	box-shadow:13px 13px 20px #cbced1,-13px -13px 20px #fff;
-	/* background-color: #fff; */
 }
 .social .github:hover{
 	background: #ecf0f3;
@@ -396,7 +395,7 @@ html{
 }
 .container{
 	width:100%;
-	height:85.7vh;
+	height:550px;
 	background-color:#ecf0f3;
 	margin:0 auto;
 	position: relative;
@@ -415,6 +414,61 @@ html{
 	left:60%;
 	top: 9%;
 }
+.form-container{
+	width:100%;
+	height:100%;
+}
+.form-container h2{
+	text-align:center;
+	margin: 20px;
+}
+.form-container div{
+	margin:0 auto;
+	align-items: center;
+}
+.form-container div input{
+	border:none;
+	outline:none;
+	display:block;
+	width:90%;
+	border-radius:20px;
+	margin: 15px;
+	font-size:16px;
+	background-color: #fffeff;
+	height:30px;
+	box-shadow: inset 7px 7px 10px #cbced1,inset -7px -7px 10px #fff;
+}
+.form-container div textarea{
+	display:block;
+	margin: 15px;
+	outline:none;
+	border: none;
+	border-radius: 10px;
+	overflow-y: scroll;
+	box-shadow: inset 7px 7px 10px #cbced1,inset -7px -7px 10px #fff;
+}
+.form-container div textarea::-webkit-scrollbar{
+	display:none;
+}
+.form-container div button{
+	background-color:purple;
+	color:#fff;
+	display:block;
+	margin: 15px;
+	outline:none;
+	border: none;
+	border-radius:20px;
+	width:90%;
+	height:50px;
+	cursor: pointer;
+}
+.left-contact{
+	background-color:#ecf0f3;
+	color:#fff;
+	width: 55%;
+	height:100%;
+}
+
 /*________________contact end's_____________________*/
 /*_______________________________________________________________________responsive_______________________________________________________________________*/
 
